fix contrast problem

--- a/css/custom.style.css
+++ b/css/custom.style.css
@@ -72,3 +72,7 @@
     background-position: 0px bottom;
   }
 }
+
+.text-muted {
+  color: #abbbc8 !important;
+}
